# pyrep

./: .buildinfo  .gitignore  OldRepository.py  README.md  Repository.py  Repository_no_trials.py  __init__.py  __pkginfo__.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  test.py
_sources/: index.txt
_static/: agogo.css
docs/: Makefile  make.bat
docs/source/: conf.py
source/: conf.py  index.rst
tests/: .pyrepinfo  __init__.py  createRepo.py  multi_processes.py  pickled  text
