[metadata]
description-file = README.md
classifier =
    Development Status :: Production/Stable
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7